# Parametric-Forming-Grinder-Guide-CAD

./: .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  requirements-cos-publish.txt  requirements.txt
desktop/: __init__.py  runtime_paths.py  sidecar_entry.py  version.py
docs/: desktop_release.md  dimension_recognition_rules.md  dual_spec_implementation_report.md  dxf_release_rules.md  guide_rail_rules.md  machine_templates.md  regression_template_management.md  side_view_rules.md  slot_width_rules.md  text_to_cad_reference.md  three_instance_rule_audit.md  validation_rules.md
frontend/: README.md  index.html  package-lock.json  package.json
scripts/: audit_relief_topology.py  check_versions.py  generate_latest_json.py  patch_updater_signature_key_id.py  publish_release_to_cos.py  run_regression_tests.py  smoke_sidecar.py  start_web.sh  verify_clean_checkout.sh
src/: __init__.py  auth.py  block_geometry.py  cavity_projection.py  dimension_precision.py  dimension_roles.py  dimension_writer.py  dual_guide_engine.py  dual_guide_input.py  dual_guide_release_audit.py  dwg_converter.py  dxf_writer.py  generate.py  generate_machine.py  geometry.py  global_rules.py  groove_profile.py  guide_design_input.py  inspection.py  machine_config.py  output_naming.py  preview.py  reference_dxf_audit.py  release_entity_audit.py  relief_arc_audit.py  section_contour_audit.py  side_view.py  side_view_config.py  web_api.py  (+8 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: lib.rs  main.rs
(+95 files in other folders)
