[package]
name = "forming-grinder-cad-desktop"
version = "1.0.1"
description = "Parametric Forming-Grinder Guide CAD desktop shell"
authors = ["Forming Grinder CAD Maintainers"]
edition = "2021"

[lib]
name = "forming_grinder_cad_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "forming-grinder-cad"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "=2.4.1", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "=2.8.5", features = [] }
tauri-runtime = "=2.9.2"
tauri-plugin-dialog = "=2.4.0"
tauri-plugin-fs = "=2.4.4"
tauri-plugin-process = "=2.3.0"
tauri-plugin-single-instance = "=2.3.4"
tauri-plugin-updater = "=2.9.0"
