[package]
name = "forming-grinder-cad-desktop"
version = "1.0.2"
description = "Parametric Forming-Grinder Guide CAD desktop shell"
authors = ["Forming Grinder CAD Maintainers"]
edition = "2021"

[lib]
name = "forming_grinder_cad_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "forming-grinder-cad"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "=2.6.3", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "=2.11.5", features = [] }
tauri-plugin-dialog = "=2.7.1"
tauri-plugin-fs = "=2.5.1"
tauri-plugin-process = "=2.3.1"
tauri-plugin-single-instance = "=2.4.3"
tauri-plugin-updater = "=2.10.1"
